--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIP_Website</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
     <!-- jQuery einbinden -->
+    <link rel="stylesheet" href="/home/robot/ros_ws/src/pkg_website_llm/pkg_website_llm/static/css/style.css">
+    <link rel="stylesheet" href="/home/robot/ros_ws/src/pkg_website_llm/pkg_website_llm/templates/style.css">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
