ReadME and MockService improved

--- a/src/pkg_website_llm/pkg_website_llm/templates/style.css
+++ b/src/pkg_website_llm/pkg_website_llm/templates/style.css
@@ -2,7 +2,7 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url('../images/Hintergrund.png');
+    background-image: url('/ros_ws/src/pkg_website_llm/pkg_website_llm/static/images/Hintergrund.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
