--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -11,7 +11,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body>
+<body style="background-image: url('../images/Hintergrund.png');">
     <h1>AIP Webseite</h1>
     <h2>Bitte stellen Sie eine Anfrage:</h2>
     <div class="container">
