--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -29,6 +29,18 @@
                 alert(response.message);
             });
         }
+        // Get the input field
+        var input = document.getElementById("request_id");
+
+    // Execute a function when the user presses a key on the keyboard
+    input.addEventListener("keypress", function(event) {
+    // If the user presses the "Enter" key on the keyboard
+    if (event.key === "Enter") {
+        event.preventDefault();
+        alert("Enter erfoglreich");
+        document.getElementById("button1").click();
+  }
+});
 //        function init() {
 //            $.post('/init', function(response) {
 //                alert(response.message);
