--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -6,21 +6,26 @@
     <title>AIP_Website</title>
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
     <!-- jQuery einbinden -->
-    <link rel="stylesheet" href="/home/robot/ros_ws/src/pkg_website_llm/pkg_website_llm/static/css/style.css">
-    <link rel="stylesheet" href="/home/robot/ros_ws/src/pkg_website_llm/pkg_website_llm/templates/style.css">
+    <link rel="stylesheet" url('/static/css/style.css')">
+    <!-- <link rel="stylesheet" href="/home/robot/ros_ws/src/pkg_website_llm/pkg_website_llm/templates/style.css"> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body style="background-image: url('../images/Hintergrund.png');">
-    <h1>AIP Webseite</h1>
-    <h2>Bitte stellen Sie eine Anfrage:</h2>
+<body style="background-image: url('/static/images/Hintergrund.png');">
+
+    <h1 style="text-align: center; color: white">AIP Webseite</h1>
+    <h2 style="text-align: center; color: white"">Bitte stellen Sie eine Anfrage:</h2>
     <div class="container">
        
-        <form>
+        <form style="text-align: center; color: white">
             <label for="fname">Please Insert Your Request here:</label>
             <input type="text" id="request_id" name="request_name"><br><br>
+            <button id="button1" onclick="buttonClicked()">Absenden</button>
+            <br><br>
           </form> 
-          <button id="button1" onclick="buttonClicked()">Absenden</button>
+         
+
+          <img style="  display: block; margin-left: auto; margin-right: auto; width: 50%; width:500px;height:500px;" src="/static/images/Platzhalter.png" alt="Objekt 1"> 
     </div>
 
     <script>
