Changed SRV file from USerInterface

--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -19,7 +19,7 @@
        
         <form style="text-align: center; color: white">
             <label for="fname">Please Insert Your Request here:</label>
-            <input type="text" id="request_id" name="request_name"><br><br>
+            <input type="textarea" id="request_id" name="request_name"><br><br>
             <button id="button1" onclick="buttonClicked()">Absenden</button>
             <br><br>
           </form> 
