--- a/src/pkg_website_llm/pkg_website_llm/static/stlye_chatbot_bkp.css
+++ b/src/pkg_website_llm/pkg_website_llm/static/stlye_chatbot_bkp.css
@@ -7,11 +7,19 @@ body {
     background-color: #f4f4f9;
 }
 
+
 .layout {
     display: flex;
     flex-direction: column;
     height: 100vh;
     color: white;
+}
+
+.main {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; /* oder flex-start, je nach gewünschter vertikaler Ausrichtung */
+    height: 400px; /* Beispielhöhe */
 }
 
 .header {
@@ -21,25 +29,15 @@ body {
     padding: 10px;
 }
 
-.main {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-grow: 1; /* Hauptinhalt wächst, um den Platz zu füllen */
-}
-
 .footer {
     background-color: #333;
     color: white;
-    text-align: left;
+    text-align: center;
     padding: 20px;
     flex-shrink: 0; /* Footer bleibt am unteren Rand */
 }
 
 .picture-container {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 10px;
     display: flex;
     flex: 1;
     padding: 20px;
@@ -49,19 +47,14 @@ body {
 }
 
 .chat-container {
-    margin-top: 20px;
-    margin-right: 30px;
-    margin-left: 10px;
-    width: 800px;
+    width: 900px;
     max-width: 100%;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /* overflow: hidden; */
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    flex-grow: 1; /* Chat-Container wächst, um den Platz zu füllen */
-    overflow-y: auto;
 }
 
 .chat-box {
