--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -22,7 +22,12 @@
     <div class="main">
         <div class="picture-container" style="color: white">
             <h2 style="color: white" >Image of Box Content</h2>
-            <img id="image" src="/static/images/Hintergrund.png" alt="ROS2 Image" width="640" height="480">
+            <img id="image" src="/static/images/Hintergrund.png" alt="ROS2 Image" width="480" height="480">
+
+        </div>
+        <div class="picture-container" style="color: white">
+            <h2 style="color: white" >Pack Planning</h2>
+            <img id="image" src="/static/images/Platzhalter.png" alt="ROS2 Image" width="480" height="480">
 
         </div>
 
@@ -32,7 +37,7 @@
             </div>
             <div class="input-container">
                 <input type="text" id="user-input" placeholder="Ihre Nachricht...">
-                <button id="send-btn"> Senden_Absenden</button>
+                <button id="send-btn"> Senden</button>
                 <!-- onclick="buttonClick()" -->
             </div>
         </div>
