--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -42,6 +42,12 @@
             </div>
         </div>
     </div>
+    <div class="main_2nd_row">
+            <div class="consent-box" id="consent_user">
+                <button id="disapprove-btn"> Ablehnen</button>
+                <button id="approve-btn"> Bestätigen</button>
+            </div>
+    </div>
     <div class="footer">
         <h3 style="color: white">Forschung und Entwicklungsprojekt 2</h3>
         <h3 style="color: white">Von Raphael Aberle, Andreas Schmitt, Leo Schäfer, Maurice Droll und Eshan Savla </h1>
