Website Feedback Added with a new srv Message

--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -43,6 +43,26 @@
         </div>
     </div>
     <div class="main_2nd_row">
+            <div class="feedback-container" style="color: white">
+                <table>
+                    <tr>
+                        <td>PackageSequence</td>
+                        <td id="package_content"> PACKAGE_INHALT</td>
+                    </tr>
+                    <tr>
+                        <td>Cylinder_ID</td>
+                        <td id="cylinder_ids">Cylinder_ID</td>
+                    </tr>
+                    <tr>
+                        <td>Grasp_Pose</td>
+                        <td id="grasp_pose">Grasp_Pose</td>
+                    </tr>
+                    <tr>
+                        <td>Place_Pose</td>
+                        <td id="place_pose">Place_Pose</td>
+                    </tr>
+                </table>
+            </div>
             <div class="consent-box" id="consent_user">
                 <button id="disapprove-btn"> Ablehnen</button>
                 <button id="approve-btn"> Bestätigen</button>
