Changed to Launch files: existing bug: images are not beeing loaded

--- a/src/pkg_website_llm/pkg_website_llm/templates/index.html
+++ b/src/pkg_website_llm/pkg_website_llm/templates/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="/home/robot/ros_ws/src/pkg_website_llm/pkg_website_llm/templates/style.css"> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="static/style_chatbot.css">
-    <script src="/static/script.js"></script>
+    <link rel="stylesheet" href="./style_chatbot.css"> 
+    <script src="./script.js"></script>
 
 </head>
 <section class="layout">
@@ -22,12 +22,12 @@
     <div class="main">
         <div class="picture-container" style="color: white">
             <h2 style="color: white" >Image of Box Content</h2>
-            <img id="image" src="/static/images/Hintergrund.png" alt="ROS2 Image" width="480" height="480">
+            <img id="image" src="./Hintergrund.png" alt="ROS2 Image" width="480" height="480">
 
         </div>
         <div class="picture-container" style="color: white">
             <h2 style="color: white" >Pack Planning</h2>
-            <img id="image" src="/static/images/Platzhalter.png" alt="ROS2 Image" width="480" height="480">
+            <img id="image" src="./Platzhalter.png" alt="ROS2 Image" width="480" height="480">
 
         </div>
 
